# digikam

./: .gitignore  AUTHORS  CMakeLists.txt  Mainpage.dox  NEWS  PACKAGING  README.md  bootstrap.macports  bootstrap.tarball
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
app/tags/: tagspopupmenu.cpp
core/: CMakeLists.txt  DigikamExportAPI.cmake
core/app/: CMakeLists.txt  DigikamCoreTarget.cmake  DigikamGuiTarget.cmake  DigikamTarget.cmake
core/app/date/: ddateedit.cpp
core/app/items/delegate/: itemdelegate.cpp
core/app/items/views/: itemcategorizedview.cpp
core/app/main/: digikamapp.cpp  digikamapp_config.cpp  main.cpp  org.kde.digikam.appdata.xml
core/app/views/stack/: itemiconview.cpp  welcomepageview.cpp
core/cmake/modules/: MacroDPlugins.cmake
core/data/about/: main.html
core/data/database/: dbconfig.xml.cmake.in
core/data/filters/: CMakeLists.txt
core/data/filters/healingclonetool/: CMakeLists.txt  readme.txt
core/data/pics/digikam/: splash-digikam.svgz
core/data/pics/showfoto/: splash-showfoto.svgz
core/dplugins/: CMakeLists.txt
core/dplugins/dimg/: CMakeLists.txt
core/dplugins/dimg/imagemagick/: CMakeLists.txt  dimgimagemagickloader.cpp  dimgimagemagickloader.h  dimgimagemagickplugin.cpp  dimgimagemagickplugin.h
core/dplugins/dimg/jpeg/: CMakeLists.txt  dimgjpegloader.cpp  dimgjpegloader.h  dimgjpegplugin.cpp  dimgjpegplugin.h
core/dplugins/dimg/jpeg2000/: CMakeLists.txt  dimgjpeg2000loader.cpp  dimgjpeg2000loader.h  dimgjpeg2000plugin.cpp  dimgjpeg2000plugin.h
core/dplugins/dimg/pgf/: CMakeLists.txt  dimgpgfloader.cpp  dimgpgfloader.h  dimgpgfplugin.cpp  dimgpgfplugin.h
core/dplugins/dimg/png/: CMakeLists.txt  dimgpngloader.cpp  dimgpngloader.h  dimgpngplugin.cpp  dimgpngplugin.h
core/dplugins/dimg/qimage/: CMakeLists.txt  dimgqimageloader.cpp  dimgqimageloader.h  dimgqimageplugin.cpp  dimgqimageplugin.h
core/dplugins/dimg/raw/: CMakeLists.txt  dimgrawloader.cpp  (+3 more)
core/dplugins/generic/tools/mediaserver/tests/: CMakeLists.txt
core/dplugins/rawimport/: CMakeLists.txt
core/dplugins/rawimport/darktable/: CMakeLists.txt  rawimportdarktableplugin.cpp  rawimportdarktableplugin.h
core/dplugins/rawimport/native/: CMakeLists.txt  rawimport.cpp  rawimport.h  rawimportnativeplugin.cpp  rawimportnativeplugin.h  rawpostprocessing.cpp  rawpostprocessing.h  rawpreview.cpp  rawpreview.h  rawsettingsbox.cpp  rawsettingsbox.h
core/dplugins/rawimport/rawtherapee/: CMakeLists.txt  rawimportrawtherapeeplugin.cpp  rawimportrawtherapeeplugin.h
core/dplugins/rawimport/ufraw/: CMakeLists.txt  rawimportufrawplugin.cpp  rawimportufrawplugin.h
core/libs/database/: CMakeLists.txt
core/libs/dialogs/: dprogressdlg.cpp  dprogressdlg.h  infodlg.cpp
core/libs/dimg/: CMakeLists.txt  dimg_fileio.cpp  dimg_p.h  drawdecoding.h
core/libs/dplugins/: CMakeLists.txt
core/libs/dtrash/: dtrashitemmodel.cpp
core/libs/iojobs/: iojob.cpp
core/libs/metadataengine/: CMakeLists.txt
core/libs/rawengine/: drawdecodersettings.h
core/libs/settings/: applicationsettings_miscs.cpp  applicationsettings_p.h
core/showfoto/: CMakeLists.txt
core/showfoto/setup/: showfotosetupplugins.cpp
core/showfoto/thumbbar/: itemviewshowfotodelegate.cpp  showfotothumbnailmodel.cpp
core/tests/: CMakeLists.txt
core/tests/advancedrename/: CMakeLists.txt
core/tests/albummodel/: CMakeLists.txt
core/tests/database/: CMakeLists.txt
core/tests/dialogs/: CMakeLists.txt
core/tests/dimg/: CMakeLists.txt  dimgfilteractiontest.cpp  dimghistorytest.cpp  magickloader.cpp
core/tests/dngwriter/: CMakeLists.txt
core/tests/dplugins/: CMakeLists.txt
core/tests/facesengine/: CMakeLists.txt  recognize.cpp  traindb.cpp
core/tests/fileio/: CMakeLists.txt
core/tests/filters/: CMakeLists.txt
core/tests/imgqsort/: CMakeLists.txt
core/tests/iojobs/: CMakeLists.txt
core/tests/metadataengine/: CMakeLists.txt
core/tests/multithreading/: CMakeLists.txt
core/tests/rawengine/: CMakeLists.txt
core/tests/timestampupdate/: CMakeLists.txt
core/tests/video/: CMakeLists.txt
core/tests/widgets/: CMakeLists.txt
core/utilities/advancedrename/: advancedrenamedialog.cpp  advancedrenameinput.cpp  advancedrenamewidget.cpp
core/utilities/firstrun/: databasepage.cpp  migratefromdigikam4page.cpp  openfilepage.cpp
core/utilities/imageeditor/: CMakeLists.txt
core/utilities/maintenance/: facesdetector.cpp  fingerprintsgenerator.cpp  maintenancedlg.cpp
core/utilities/searchwindow/: searchtabheader.cpp
core/utilities/setup/: setup.cpp  setupicc.cpp  setupplugins.cpp  setupplugins.h
data/: tips
digikam/fileaction/: fileactionmngr.cpp
digikam/items/: digikamimageview.cpp  digikamimageview.h
digikam/main/: digikamapp.cpp  digikamapp_p.h
digikam/tags/: addtagscompletionbox.cpp  addtagslineedit.cpp  addtagslineedit.h  tagbuffer.cpp  tagbuffer.h  tagspopupmenu.cpp
digikam/views/: digikamview.cpp  digikamview.h
libs/database/: albumdb.cpp
libs/database/engine/: dbenginebackend.cpp
libs/database/item/: imagescanner.cpp
libs/dimg/loaders/: dimgloader.cpp
libs/imageproperties/: imagedescedittab.cpp  imagedescedittab.h  imagepropertiessidebar.h  imagepropertiessidebardb.cpp  imagepropertiessidebardb.h
libs/widgets/common/: searchtextbar.cpp
project/bundles/appimage/: 01-build-host.sh  03-build-digikam.sh  04-build-appimage.sh  README
project/bundles/macports/: 01-build-macports.sh  03-build-digikam.sh  04-build-installer.sh  config.sh
project/bundles/mxe/: 03-build-digikam.sh  config.sh  makeall.sh  update.sh
project/reports/: common.sh
project/scripts/: bootstrap-exiv2.linux.sh  bootstrap-gmicqt.sh  bootstrap-lensfun.sh  bootstrap-marble.sh  bootstrap-qtav.sh  bootstrap.opencv-minimal-linux.sh  build-mxe-exiv2.sh  dropextraspaces.sh  exportapi.sh  git-rename-remote-branch.sh  rm_git_mergetool_leftovers.sh  scankdedep.sh  tabs2spaces.sh
utilities/imageeditor/editor/: imagewindow.cpp  imagewindow.h
utilities/setup/: setupdatabase.cpp  setupplugins.cpp
(+248 files in other folders)
