#
# Copyright (c) 2010-2019 by Gilles Caulier, <caulier dot gilles at gmail dot com>
#
# Redistribution and use is allowed according to the terms of the BSD license.
# For details see the accompanying COPYING-CMAKE-SCRIPTS file.

# NOTE: Native plugin use internal libraw from digiKam core.
add_subdirectory(native)
add_subdirectory(ufraw)
add_subdirectory(rawtherapee)
